@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.gradle.internal.precommit;
@@ -20,6 +21,7 @@ import org.gradle.api.model.ObjectFactory;
 import org.gradle.api.provider.MapProperty;
 import org.gradle.api.provider.Property;
 import org.gradle.api.provider.SetProperty;
+import org.gradle.api.tasks.CacheableTask;
 import org.gradle.api.tasks.CompileClasspath;
 import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.InputFiles;
@@ -48,7 +50,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 
@@ -57,6 +58,7 @@ import static org.elasticsearch.gradle.util.GradleUtils.projectPath;
 /**
  * Checks for split packages with dependencies. These are not allowed in a future modularized world.
  */
+@CacheableTask
 public class SplitPackagesAuditTask extends DefaultTask {
 
     private static final Logger LOGGER = Logging.getLogger(SplitPackagesAuditTask.class);
@@ -234,7 +236,7 @@ public class SplitPackagesAuditTask extends DefaultTask {
             String lastPackageName = null;
             Set<String> currentClasses = null;
             boolean filterErrorsFound = false;
-            for (String fqcn : getParameters().getIgnoreClasses().get().stream().sorted().collect(Collectors.toList())) {
+            for (String fqcn : getParameters().getIgnoreClasses().get().stream().sorted().toList()) {
                 int lastDot = fqcn.lastIndexOf('.');
                 if (lastDot == -1) {
                     LOGGER.error("Missing package in classname in split package ignores: " + fqcn);
