@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.painless.node;
@@ -11,7 +12,6 @@ package org.elasticsearch.painless.node;
 import org.elasticsearch.painless.Location;
 import org.elasticsearch.painless.phase.UserTreeVisitor;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -48,8 +48,8 @@ public class SFunction extends ANode {
 
         this.returnCanonicalTypeName = Objects.requireNonNull(returnCanonicalTypeName);
         this.functionName = Objects.requireNonNull(name);
-        this.canonicalTypeNameParameters = Collections.unmodifiableList(Objects.requireNonNull(canonicalTypeNameParameters));
-        this.parameterNames = Collections.unmodifiableList(Objects.requireNonNull(parameterNames));
+        this.canonicalTypeNameParameters = List.copyOf(canonicalTypeNameParameters);
+        this.parameterNames = List.copyOf(parameterNames);
         this.blockNode = Objects.requireNonNull(blockNode);
         this.isInternal = isInternal;
         this.isSynthetic = isSynthetic;
