@@ -6,7 +6,6 @@
  */
 package org.elasticsearch.xpack.core.ilm;
 
-import org.elasticsearch.Version;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
@@ -14,13 +13,13 @@ import org.elasticsearch.cluster.metadata.LifecycleExecutionState;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.Index;
+import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.xpack.core.ilm.Step.StepKey;
 import org.elasticsearch.xpack.core.ilm.step.info.SingleMessageFieldInfo;
 
 import java.time.Clock;
 import java.time.Instant;
 import java.time.ZoneId;
-import java.util.Collections;
 import java.util.Map;
 import java.util.UUID;
 
@@ -70,8 +69,8 @@ public class ClusterStateWaitUntilThresholdStepTests extends AbstractStepTestCas
             new Index("testName", UUID.randomUUID().toString()),
             ClusterState.EMPTY_STATE
         );
-        assertThat(result.isComplete(), is(false));
-        assertThat(result.getInfomationContext(), nullValue());
+        assertThat(result.complete(), is(false));
+        assertThat(result.informationContext(), nullValue());
     }
 
     public void testIsConditionMetForUnderlyingStep() {
@@ -79,11 +78,11 @@ public class ClusterStateWaitUntilThresholdStepTests extends AbstractStepTestCas
             // threshold is not breached and the underlying step condition is met
             IndexMetadata indexMetadata = IndexMetadata.builder("follower-index")
                 .settings(
-                    settings(Version.CURRENT).put(LifecycleSettings.LIFECYCLE_INDEXING_COMPLETE, "true")
+                    settings(IndexVersion.current()).put(LifecycleSettings.LIFECYCLE_INDEXING_COMPLETE, "true")
                         .put(LifecycleSettings.LIFECYCLE_STEP_WAIT_TIME_THRESHOLD, "480h")
                 )
                 .putCustom(ILM_CUSTOM_METADATA_KEY, Map.of("step_time", String.valueOf(System.currentTimeMillis())))
-                .putCustom(CCR_METADATA_KEY, Collections.emptyMap())
+                .putCustom(CCR_METADATA_KEY, Map.of())
                 .numberOfShards(1)
                 .numberOfReplicas(0)
                 .build();
@@ -95,19 +94,19 @@ public class ClusterStateWaitUntilThresholdStepTests extends AbstractStepTestCas
             ClusterStateWaitUntilThresholdStep underTest = new ClusterStateWaitUntilThresholdStep(stepToExecute, randomStepKey());
 
             ClusterStateWaitStep.Result result = underTest.isConditionMet(indexMetadata.getIndex(), clusterState);
-            assertThat(result.isComplete(), is(true));
-            assertThat(result.getInfomationContext(), nullValue());
+            assertThat(result.complete(), is(true));
+            assertThat(result.informationContext(), nullValue());
         }
 
         {
             // threshold is not breached and the underlying step condition is NOT met
             IndexMetadata indexMetadata = IndexMetadata.builder("follower-index")
                 .settings(
-                    settings(Version.CURRENT).put(LifecycleSettings.LIFECYCLE_INDEXING_COMPLETE, "false")
+                    settings(IndexVersion.current()).put(LifecycleSettings.LIFECYCLE_INDEXING_COMPLETE, "false")
                         .put(LifecycleSettings.LIFECYCLE_STEP_WAIT_TIME_THRESHOLD, "48h")
                 )
                 .putCustom(ILM_CUSTOM_METADATA_KEY, Map.of("step_time", String.valueOf(System.currentTimeMillis())))
-                .putCustom(CCR_METADATA_KEY, Collections.emptyMap())
+                .putCustom(CCR_METADATA_KEY, Map.of())
                 .numberOfShards(1)
                 .numberOfReplicas(0)
                 .build();
@@ -120,10 +119,10 @@ public class ClusterStateWaitUntilThresholdStepTests extends AbstractStepTestCas
             ClusterStateWaitUntilThresholdStep underTest = new ClusterStateWaitUntilThresholdStep(stepToExecute, randomStepKey());
             ClusterStateWaitStep.Result result = underTest.isConditionMet(indexMetadata.getIndex(), clusterState);
 
-            assertThat(result.isComplete(), is(false));
-            assertThat(result.getInfomationContext(), notNullValue());
+            assertThat(result.complete(), is(false));
+            assertThat(result.informationContext(), notNullValue());
             WaitForIndexingCompleteStep.IndexingNotCompleteInfo info = (WaitForIndexingCompleteStep.IndexingNotCompleteInfo) result
-                .getInfomationContext();
+                .informationContext();
             assertThat(
                 info.getMessage(),
                 equalTo(
@@ -137,10 +136,10 @@ public class ClusterStateWaitUntilThresholdStepTests extends AbstractStepTestCas
             // underlying step is executed once even if the threshold is breached and the underlying complete result is returned
             IndexMetadata indexMetadata = IndexMetadata.builder("follower-index")
                 .settings(
-                    settings(Version.CURRENT).put(LifecycleSettings.LIFECYCLE_INDEXING_COMPLETE, "true")
+                    settings(IndexVersion.current()).put(LifecycleSettings.LIFECYCLE_INDEXING_COMPLETE, "true")
                         .put(LifecycleSettings.LIFECYCLE_STEP_WAIT_TIME_THRESHOLD, "1s")
                 )
-                .putCustom(CCR_METADATA_KEY, Collections.emptyMap())
+                .putCustom(CCR_METADATA_KEY, Map.of())
                 .putCustom(ILM_CUSTOM_METADATA_KEY, Map.of("step_time", String.valueOf(1234L)))
                 .numberOfShards(1)
                 .numberOfReplicas(0)
@@ -154,8 +153,8 @@ public class ClusterStateWaitUntilThresholdStepTests extends AbstractStepTestCas
             ClusterStateWaitUntilThresholdStep underTest = new ClusterStateWaitUntilThresholdStep(stepToExecute, nextKeyOnThresholdBreach);
 
             ClusterStateWaitStep.Result result = underTest.isConditionMet(indexMetadata.getIndex(), clusterState);
-            assertThat(result.isComplete(), is(true));
-            assertThat(result.getInfomationContext(), nullValue());
+            assertThat(result.complete(), is(true));
+            assertThat(result.informationContext(), nullValue());
             assertThat(underTest.getNextStepKey(), is(not(nextKeyOnThresholdBreach)));
             assertThat(underTest.getNextStepKey(), is(stepToExecute.getNextStepKey()));
         }
@@ -165,10 +164,10 @@ public class ClusterStateWaitUntilThresholdStepTests extends AbstractStepTestCas
             // step under test will return `complete` (becuase the threshold is breached and we don't want to wait anymore)
             IndexMetadata indexMetadata = IndexMetadata.builder("follower-index")
                 .settings(
-                    settings(Version.CURRENT).put(LifecycleSettings.LIFECYCLE_INDEXING_COMPLETE, "false")
+                    settings(IndexVersion.current()).put(LifecycleSettings.LIFECYCLE_INDEXING_COMPLETE, "false")
                         .put(LifecycleSettings.LIFECYCLE_STEP_WAIT_TIME_THRESHOLD, "1h")
                 )
-                .putCustom(CCR_METADATA_KEY, Collections.emptyMap())
+                .putCustom(CCR_METADATA_KEY, Map.of())
                 .putCustom(ILM_CUSTOM_METADATA_KEY, Map.of("step_time", String.valueOf(1234L)))
                 .numberOfShards(1)
                 .numberOfReplicas(0)
@@ -184,16 +183,16 @@ public class ClusterStateWaitUntilThresholdStepTests extends AbstractStepTestCas
             ClusterStateWaitUntilThresholdStep underTest = new ClusterStateWaitUntilThresholdStep(stepToExecute, nextKeyOnThresholdBreach);
             ClusterStateWaitStep.Result result = underTest.isConditionMet(indexMetadata.getIndex(), clusterState);
 
-            assertThat(result.isComplete(), is(true));
-            assertThat(result.getInfomationContext(), notNullValue());
-            SingleMessageFieldInfo info = (SingleMessageFieldInfo) result.getInfomationContext();
+            assertThat(result.complete(), is(true));
+            assertThat(result.informationContext(), notNullValue());
+            SingleMessageFieldInfo info = (SingleMessageFieldInfo) result.informationContext();
             assertThat(
-                info.getMessage(),
+                info.message(),
                 equalTo(
                     "["
-                        + currentStepKey.getName()
+                        + currentStepKey.name()
                         + "] lifecycle step, as part of ["
-                        + currentStepKey.getAction()
+                        + currentStepKey.action()
                         + "] "
                         + "action, for index [follower-index] executed for more than [1h]. Abandoning execution and moving to the next "
                         + "fallback step ["
@@ -242,7 +241,7 @@ public class ClusterStateWaitUntilThresholdStepTests extends AbstractStepTestCas
 
     public void testIsCompletableBreaches() {
         IndexMetadata indexMetadata = IndexMetadata.builder("index")
-            .settings(settings(Version.CURRENT))
+            .settings(settings(IndexVersion.current()))
             .numberOfShards(1)
             .numberOfReplicas(0)
             .putCustom(ILM_CUSTOM_METADATA_KEY, Map.of("step_time", String.valueOf(Clock.systemUTC().millis())))
@@ -260,11 +259,6 @@ public class ClusterStateWaitUntilThresholdStepTests extends AbstractStepTestCas
                 }
 
                 @Override
-                public boolean isCompletable() {
-                    return true;
-                }
-
-                @Override
                 public boolean isRetryable() {
                     return true;
                 }
@@ -272,9 +266,9 @@ public class ClusterStateWaitUntilThresholdStepTests extends AbstractStepTestCas
             new StepKey("phase", "action", "breached")
         );
 
-        assertFalse(step.isConditionMet(indexMetadata.getIndex(), clusterState).isComplete());
+        assertFalse(step.isConditionMet(indexMetadata.getIndex(), clusterState).complete());
 
-        assertThat(step.getNextStepKey().getName(), equalTo("next-key"));
+        assertThat(step.getNextStepKey().name(), equalTo("next-key"));
 
         step = new ClusterStateWaitUntilThresholdStep(
             new ClusterStateWaitStep(new StepKey("phase", "action", "key"), new StepKey("phase", "action", "next-key")) {
@@ -295,7 +289,7 @@ public class ClusterStateWaitUntilThresholdStepTests extends AbstractStepTestCas
             },
             new StepKey("phase", "action", "breached")
         );
-        assertTrue(step.isConditionMet(indexMetadata.getIndex(), clusterState).isComplete());
-        assertThat(step.getNextStepKey().getName(), equalTo("breached"));
+        assertTrue(step.isConditionMet(indexMetadata.getIndex(), clusterState).complete());
+        assertThat(step.getNextStepKey().name(), equalTo("breached"));
     }
 }
