@@ -7,7 +7,6 @@
 
 package org.elasticsearch.xpack.core.ilm;
 
-import org.elasticsearch.Version;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.ComposableIndexTemplate;
@@ -20,11 +19,12 @@ import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.metadata.Template;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
+import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.indices.EmptySystemIndices;
 import org.elasticsearch.test.ESTestCase;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 import static org.hamcrest.Matchers.equalTo;
 
@@ -40,7 +40,7 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
             ClusterState state = ClusterState.builder(new ClusterName("mycluster")).build();
             assertThat(
                 LifecyclePolicyUtils.calculateUsage(iner, state, "mypolicy"),
-                equalTo(new ItemUsage(Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
+                equalTo(new ItemUsage(List.of(), List.of(), List.of()))
             );
         }
 
@@ -52,7 +52,7 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
                             new IndexLifecycleMetadata(
-                                Collections.singletonMap("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
+                                Map.of("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
                                 OperationMode.RUNNING
                             )
                         )
@@ -61,7 +61,7 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                 .build();
             assertThat(
                 LifecyclePolicyUtils.calculateUsage(iner, state, "mypolicy"),
-                equalTo(new ItemUsage(Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
+                equalTo(new ItemUsage(List.of(), List.of(), List.of()))
             );
         }
 
@@ -73,27 +73,20 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
                             new IndexLifecycleMetadata(
-                                Collections.singletonMap("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
+                                Map.of("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
                                 OperationMode.RUNNING
                             )
                         )
                         .put(
                             IndexMetadata.builder("myindex")
-                                .settings(
-                                    Settings.builder()
-                                        .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 1)
-                                        .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
-                                        .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                                        .put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy")
-                                        .build()
-                                )
+                                .settings(indexSettings(IndexVersion.current(), 1, 0).put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy"))
                         )
                         .build()
                 )
                 .build();
             assertThat(
                 LifecyclePolicyUtils.calculateUsage(iner, state, "mypolicy"),
-                equalTo(new ItemUsage(Collections.singleton("myindex"), Collections.emptyList(), Collections.emptyList()))
+                equalTo(new ItemUsage(List.of("myindex"), List.of(), List.of()))
             );
         }
 
@@ -105,39 +98,30 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
                             new IndexLifecycleMetadata(
-                                Collections.singletonMap("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
+                                Map.of("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
                                 OperationMode.RUNNING
                             )
                         )
                         .put(
                             IndexMetadata.builder("myindex")
-                                .settings(
-                                    Settings.builder()
-                                        .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 1)
-                                        .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
-                                        .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                                        .put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy")
-                                        .build()
-                                )
+                                .settings(indexSettings(IndexVersion.current(), 1, 0).put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy"))
                         )
                         .putCustom(
                             ComposableIndexTemplateMetadata.TYPE,
                             new ComposableIndexTemplateMetadata(
-                                Collections.singletonMap(
+                                Map.of(
                                     "mytemplate",
-                                    new ComposableIndexTemplate(
-                                        Collections.singletonList("myds"),
-                                        new Template(
-                                            Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy").build(),
-                                            null,
-                                            null
-                                        ),
-                                        null,
-                                        null,
-                                        null,
-                                        null,
-                                        new ComposableIndexTemplate.DataStreamTemplate(false, false)
-                                    )
+                                    ComposableIndexTemplate.builder()
+                                        .indexPatterns(List.of("myds"))
+                                        .template(
+                                            new Template(
+                                                Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy").build(),
+                                                null,
+                                                null
+                                            )
+                                        )
+                                        .dataStreamTemplate(new ComposableIndexTemplate.DataStreamTemplate(false, false))
+                                        .build()
                                 )
                             )
                         )
@@ -146,7 +130,7 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                 .build();
             assertThat(
                 LifecyclePolicyUtils.calculateUsage(iner, state, "mypolicy"),
-                equalTo(new ItemUsage(Collections.singleton("myindex"), Collections.emptyList(), Collections.singleton("mytemplate")))
+                equalTo(new ItemUsage(List.of("myindex"), List.of(), List.of("mytemplate")))
             );
         }
 
@@ -155,71 +139,46 @@ public class LifecyclePolicyUtilsTests extends ESTestCase {
                 .putCustom(
                     IndexLifecycleMetadata.TYPE,
                     new IndexLifecycleMetadata(
-                        Collections.singletonMap("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
+                        Map.of("mypolicy", LifecyclePolicyMetadataTests.createRandomPolicyMetadata("mypolicy")),
                         OperationMode.RUNNING
                     )
                 )
                 .put(
                     IndexMetadata.builder("myindex")
-                        .settings(
-                            Settings.builder()
-                                .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 1)
-                                .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
-                                .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                                .put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy")
-                                .build()
-                        )
+                        .settings(indexSettings(IndexVersion.current(), 1, 0).put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy"))
                 )
                 .put(
                     IndexMetadata.builder("another")
-                        .settings(
-                            Settings.builder()
-                                .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 1)
-                                .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
-                                .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                                .put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy")
-                                .build()
-                        )
+                        .settings(indexSettings(IndexVersion.current(), 1, 0).put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy"))
                 )
                 .put(
                     IndexMetadata.builder("other")
-                        .settings(
-                            Settings.builder()
-                                .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 1)
-                                .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
-                                .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                                .put(LifecycleSettings.LIFECYCLE_NAME, "otherpolicy")
-                                .build()
-                        )
+                        .settings(indexSettings(IndexVersion.current(), 1, 0).put(LifecycleSettings.LIFECYCLE_NAME, "otherpolicy"))
                 )
 
                 .putCustom(
                     ComposableIndexTemplateMetadata.TYPE,
                     new ComposableIndexTemplateMetadata(
-                        Collections.singletonMap(
+                        Map.of(
                             "mytemplate",
-                            new ComposableIndexTemplate(
-                                Collections.singletonList("myds"),
-                                new Template(Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy").build(), null, null),
-                                null,
-                                null,
-                                null,
-                                null,
-                                new ComposableIndexTemplate.DataStreamTemplate(false, false)
-                            )
+                            ComposableIndexTemplate.builder()
+                                .indexPatterns(List.of("myds"))
+                                .template(
+                                    new Template(Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, "mypolicy").build(), null, null)
+                                )
+                                .dataStreamTemplate(new ComposableIndexTemplate.DataStreamTemplate(false, false))
+                                .build()
                         )
                     )
                 );
             // Need to get the real Index instance of myindex:
-            mBuilder.put(DataStreamTestHelper.newInstance("myds", Collections.singletonList(mBuilder.get("myindex").getIndex())));
+            mBuilder.put(DataStreamTestHelper.newInstance("myds", List.of(mBuilder.get("myindex").getIndex())));
 
             // Test where policy exists and is used by an index, datastream, and template
             ClusterState state = ClusterState.builder(new ClusterName("mycluster")).metadata(mBuilder.build()).build();
             assertThat(
                 LifecyclePolicyUtils.calculateUsage(iner, state, "mypolicy"),
-                equalTo(
-                    new ItemUsage(Arrays.asList("myindex", "another"), Collections.singleton("myds"), Collections.singleton("mytemplate"))
-                )
+                equalTo(new ItemUsage(List.of("myindex", "another"), List.of("myds"), List.of("mytemplate")))
             );
         }
     }
